# Agentic-Coding-Tasks

./: .env.example  .gitignore  pyproject.toml  readme.md
trials/db-migration-local-storage__Cv8xfi4/: config.json  exception.txt  result.json
trials/db-migration-local-storage__EKQZ7Mp/: config.json  result.json
trials/db-migration-local-storage__KBAikem/: config.json  result.json
trials/db-migration-local-storage__NSZijUK/: config.json  result.json
trials/db-migration-local-storage__yx4s6kG/: config.json  result.json
trials/fix-cpu-bound-blocking__3mETNW5/: config.json  result.json
trials/fix-cpu-bound-blocking__fihWcrc/: config.json  result.json
trials/fix-cpu-bound-blocking__gkLhwzN/: config.json  result.json
trials/fix-document-index-sync__H4udTka/: config.json  result.json
trials/fix-document-index-sync__TmQrYGz/: config.json  result.json
trials/fix-document-index-sync__aS7m6bg/: config.json  result.json
trials/fix-document-index-sync__ezQHQkp/: config.json  result.json
trials/fix-document-index-sync__hM7THSs/: config.json  result.json
trials/fix-document-index-sync__jWvBgcd/: config.json  exception.txt  result.json
trials/fix-fire-and-forget-analytics__QnYzAho/: config.json  exception.txt
trials/fix-fire-and-forget-analytics__RcYX6g7/: config.json  result.json
trials/fix-fire-and-forget-analytics__UjpHqbk/: config.json  result.json
trials/fix-fire-and-forget-analytics__cVZRdQH/: config.json  exception.txt
trials/fix-fire-and-forget-analytics__pPUT7dQ/: config.json  result.json
trials/fix-streaming-heartbeat__D8MX5be/: config.json  (+1 more)
(+257 files in other folders)
