[project]
name = "agentic_coding_tasks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "harbor==0.1.17",
    "pydantic>=2.11.7",
    "shortuuid>=1.0.13",
    "typer>=0.16.0",
    "requests>=2.32.4",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "toml>=0.10.2",
    "tenacity>=9.1.2",
    "openai<1.100.0",
    "python-dotenv>=1.1.1",
    "litellm>=1.79.0",
    "jinja2>=3.1.6",
    "dirhash>=0.5.0",
    "e2b>=2.4.2",
    "modal>=1.2.1",
    "datasets>=4.4.1",
    "runloop-api-client>=0.64.0",
    "daytona==0.112.2",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
